# Parallel-GA-TSP

./: CMakeLists.txt  LICENSE  README.md  main.cpp  plottsp.py
src/: MPIController.cpp  MPIController.h  MPITimer.cpp  MPITimer.h  Random.cpp  Random.h  TSPRoute.cpp  TSPRoute.h  TravellingSalesman.cpp  TravellingSalesman.h
